# mask2former-cutout

./: .gitignore  README.md  pyproject.toml
.docs/: project_build_guide.md
.plans/: INIT_PLAN.md
ai-core/: .env.example  pyproject.toml  req.txt
ai-core/configs/: cutout_dataset_coco_voc.json  cutout_dataset_small.json  default.yaml
ai-core/configs/data/: coco.yaml
ai-core/configs/model/: mask2former_swin_small.yaml
ai-core/configs/train/: default.yaml
ai-core/docs/: dataset_build.md  model_check.md
ai-core/scripts/: README.md  build_cutout_dataset.py  download_and_build_coco_cutout.py  setup_env.sh  train.sh
ai-core/scripts/data/: build_cutout_dataset.py  prepare_pascal_voc2012.py
ai-core/src/: __init__.py  train.py
ai-core/src/data/: __init__.py  coco_dataset.py  transforms.py
ai-core/src/engine/: trainer.py
ai-core/src/models/: __init__.py  losses.py  mask2former.py
ai-core/src/tools/: __init__.py  convert_coco.py
backend/: main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py  engine.py  image_ops.py  model_registry.py  storage.py
backend/app/schemas/: __init__.py  request.py  response.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: HistoryList.vue  ImageUploader.vue  MaskCanvas.vue  ResultPanel.vue  ResultViewer.vue
frontend/src/composables/: useCutoutApi.ts
frontend/src/types/: index.ts
