[project]
name = "mask2former-cutout"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.uv.workspace]
members = ["ai-core", "backend"]

# ---------------------------------------------------------------------------
# Shared indexes — inherited by all workspace members
# ---------------------------------------------------------------------------

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# ---------------------------------------------------------------------------
# Shared sources — PyTorch packages must resolve from the CUDA index
# ---------------------------------------------------------------------------

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
