[project]
name = "mask2former-cutout-backend"
version = "0.1.0"
description = "FastAPI inference microservice for Mask2Former cutout"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "pillow>=11.0.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "scipy>=1.13.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.57.0",
    "python-dotenv>=1.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
